Perkin-UAT/force-app/main/default/objects/Forecast_Snapshots__c/Forecast_Snapshots__c.object-meta.xml
<CustomObject>
    <description>Custom object which holds the Analytical Snapshots from source reports (Ian Brown)</description>
    <label>Forecast Snapshot</label>
    <nameField>
        <label>Forecast_ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>