Perkin-UAT/force-app/main/default/objects/Forecast_Snapshots__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <length>25</length>
    <type>Text</type>
</CustomField>