Perkin-UAT/force-app/main/default/objects/Forecast_Snapshots__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <length>5</length>
    <type>Text</type>
</CustomField>