Perkin-UAT/force-app/main/default/objects/Forecast_Snapshots__c/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <label>Market Segment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>