Perkin-UAT/force-app/main/default/objects/Forecast_Snapshots__c/fields/Override_Comment__c.field-meta.xml
<CustomField>
    <fullName>Override_Comment__c</fullName>
    <label>Override Comment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>