Perkin-UAT/force-app/main/default/objects/Forecast_Snapshots__c/fields/Shipping_Terms__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Terms__c</fullName>
    <label>Shipping Terms</label>
    <length>40</length>
    <type>Text</type>
</CustomField>