Perkin-UAT/force-app/main/default/objects/Forecast_Snapshots__c/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <label>Territory Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>