Perkin-UAT/force-app/main/default/objects/Forecast_Snapshots__c/fields/WinRate__c.field-meta.xml
<CustomField>
    <fullName>WinRate__c</fullName>
    <label>WinRate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>